force-app/main/default/objects/Program__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <inlineHelpText>Total minutes required to complete all tasks within this program.</inlineHelpText>
    <label>Duration Mins.</label>
    <summarizedField>Program_Task__c.Duration_Mins__c</summarizedField>
    <summaryForeignKey>Program_Task__c.Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>