force-app/main/default/objects/Program__c/fields/Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assignments__c</fullName>
    <inlineHelpText>How many employees were assigned to this program?</inlineHelpText>
    <label>Assignment Count</label>
    <summaryForeignKey>Program_Assignment__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>