force-app/main/default/objects/Program__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <description>Total number of tasks that are a part of this program.</description>
    <label>Number of Tasks</label>
    <summaryForeignKey>Program_Task__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>