force-app/main/default/objects/Program__c/fields/Number_of_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Working_Days__c</fullName>
    <formula>CEILING(((Duration_Mins__c /60)/8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Working Days Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>