force-app/main/default/objects/Program__c/fields/Program_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Program_Duration_Days__c</fullName>
    <inlineHelpText>How many days will it take to complete this program?</inlineHelpText>
    <label>Program Duration in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>