force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Tasks__c</columns>
    <columns>Program_Duration_Days__c</columns>
    <columns>Number_of_Assignments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>